# SecuritySocket

./: .gitignore  CMakeLists.txt  readme.md
.claude/: settings.local.json
lib/openssl/cmake/crypto/: CMakeLists.txt  bn_conf.h.cmake  buildinf.h  dso_conf.h.cmake
prj/android/: build.gradle.kts  settings.gradle  settings.gradle.kts
prj/android/SecuritySocket/: build.gradle  build.gradle.kts
prj/android/SecuritySocket/libs/SecuritySocket/include/: SecuritySocket.hpp
prj/android/SecuritySocket/libs/openssl/include/openssl/: opensslconf.h
prj/android/SecuritySocket/src/androidTest/java/com/bn3monkey/securitysocket/: ExampleInstrumentedTest.kt
prj/android/SecuritySocket/src/main/cpp/: CMakeLists.txt  securitysocket.cpp
prj/android/SecuritySocket/src/main/java/com/bn3monkey/securitysocket/: NativeLib.kt
prj/android/SecuritySocket/src/test/java/com/bn3monkey/securitysocket/: ExampleUnitTest.kt
prj/android/app/: build.gradle  build.gradle.kts
prj/android/app/src/androidTest/java/com/bn3monkey/securitysocket/: ExampleInstrumentedTest.kt
prj/android/app/src/main/: AndroidManifest.xml
prj/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
prj/android/app/src/main/java/com/bn3monkey/securitysocket/: MainActivity.kt
prj/android/app/src/main/res/values/: strings.xml  themes.xml
prj/android/app/src/main/res/values-night/: themes.xml
prj/android/app/src/test/java/com/bn3monkey/securitysocket/: ExampleUnitTest.kt
prj/android/gradle/wrapper/: gradle-wrapper.properties
prj/windows/: CMakeLists.txt  CMakeLists2.txt  CMakeSettings.json  main.cpp  server.py
script/: allow_test_port.ps1  distribute.py  generate-msvc-build-script.sh
src/: SecuritySocket.cpp  SecuritySocket.hpp  memo.md
src/implementation/: ActiveSocket.cpp  ActiveSocket.hpp  BaseSocket.hpp  ClientActiveSocket.cpp  ClientActiveSocket.hpp  ObjectPool.hpp  PassiveSocket.cpp  PassiveSocket.hpp  ServerActiveSocket.cpp  ServerActiveSocket.hpp  SocketAddress.cpp  SocketAddress.hpp  SocketBroadcastServer.cpp  SocketBroadcastServer.hpp  SocketClient.cpp  SocketClient.hpp  SocketConnection.cpp  SocketConnection.hpp  SocketEvent.hpp  SocketEventServer.cpp  SocketEventServer.hpp  SocketEvent_Linux.cpp  SocketEvent_Windows.cpp  SocketHelper.hpp  SocketRequestServer.cpp  SocketRequestServer.hpp  SocketResult.hpp  SocketServer.cpp  SocketServer.hpp  SocketStream.cpp  TCPAddress.cpp  TCPAddress.hpp  TCPClient.cpp  TCPClient.hpp  TCPServer.cpp  TCPServer.hpp  TCPSocket.cpp  TCPSocket.hpp  TCPStream.cpp  TCPStream.hpp  (+2 more)
test/: securitysocekttest.cpp  securitysockettest.hpp  securitysockettest_helper.hpp  securitysockettest_tcp.cpp  securitysockettest_tcp_broadcast.cpp  securitysockettest_tcp_request_echo.cpp  securitysockettest_tcp_request_file.cpp  securitysockettest_tls.cpp  securitysockettest_tlshelper.cpp  securitysockettest_tlshelper.hpp
test/android/: settings.gradle.kts
test/android/app/: build.gradle.kts
test/android/app/src/androidTest/java/com/bn3monkey/securitysocketandroidtest/: SecuritySocketAndroidTest.kt
test/android/app/src/main/: AndroidManifest.xml
test/android/app/src/main/cpp/: CMakeLists.txt  main.cpp
test/android/app/src/main/java/com/bn3monkey/securitysocketandroidtest/: MainActivity.kt
test/android/app/src/main/res/values/: strings.xml  themes.xml
test/android/app/src/main/res/values-night/: themes.xml
test/android/app/src/test/java/com/bn3monkey/securitysocketandroidtest/: ExampleUnitTest.kt
test/android/gradle/: libs.versions.toml
test/android/gradle/wrapper/: gradle-wrapper.properties
test/linux/: CMakeLists.txt  CMakeSettings.json  main.cpp
test/mingw/: CMakeLists.txt  main.cpp
test/msvc/: CMakeLists.txt  main.cpp
test/windows/: CMakeLists.txt
